# IEP

Proiect1/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  tema1  tema1.cpp
Proiect2/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  tema2  tema2.cpp
Proiect3/: tema3.cpp
